--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </section>
   <!--end hero-->
   <!-- "what we do" section -->
-  <section id="what-we-do">
+  <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
     <p>
       butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
@@ -72,7 +72,7 @@
   <!-- "what you do" section -->
   <section id="what-you-do">
     <h2>What You Do</h2>
-
+    
     <div>
       <!-- insert this img element -->
       <img src="./assets/images/step-1.svg" alt="decorative-image-one" />
