--- a/index.html
+++ b/index.html
@@ -145,7 +145,32 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.4245564186303!2d-123.12017178413247!3d49.268351979706594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673dbe80a0fb9%3A0x59e64c226801cebc!2s619%20Moberly%20Rd%2C%20Vancouver%2C%20BC%20V5Z%204B1!5e0!3m2!1sen!2sca!4v1645422225340!5m2!1sen!2sca" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>
+    </div>
   </section>
+
+  <div>
+    <h3>Run Buddy</h3>
+    <p>
+      Any questions or concerns before signing up?
+      <br />
+      Let us know and we'll be happy to talk to you!
+    </p>
+    <address>
+      55 Main Street <br/>
+      Some Town, Ca <br/>
+      12345<br />
+      P: 555.RUN.BUDZ (555.786.2839)<br/>
+      E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+    </address>
+  </div>
   
   <!-- footer -->
   <footer>
