contact-info-update

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <title>RUN BUDDY</title>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+  <meta charset="UTF-8" />
+  <title>RUN BUDDY</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
-<header>
+  <header>
     <h1>
       <a href="/">RUN BUDDY</a>
     </h1>
@@ -49,7 +51,7 @@
           <label for="trainer-no">No</label>
         </p>
         <p>
-          <label for="checkbox" >
+          <label for="checkbox">
             I acknowledge that I am at least 18 years of age.
           </label>
           <input type="checkbox" name="age-confirm" id="checkbox" />
@@ -65,111 +67,117 @@
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
   </section>
-  
+
   <!-- "what you do" section -->
   <section id="what-you-do" class="steps">
     <h2 class="section-title secondary-border">What You Do</h2>
-    
+
     <div>
       <!-- insert this img element -->
       <img src="./assets/images/step-1.svg" alt="decorative-image-one" />
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
-  
+
     <div>
       <img src="./assets/images/step-2.svg" alt="decorative-image-two" />
       <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
       <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
-  
+
     <div>
       <img src="./assets/images/step-3.svg" alt="decorative-image-three" />
       <h3>Step 3: <span>Get Running.</span></h3>
       <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
-  
+
     <div>
       <img src="./assets/images/step-4.svg" alt="decorative-image-three" />
       <h3><span>Step 4: See Results.</span></h3>
       <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
-  
+
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
     <h2 class="section-title primary-border">
       Meet The Trainers</h2>
-      <article class="trainer">
-        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-        <div class="trainer-bio text-left">
-          <h3>Arron Stephens</h3>
-          <h4>Speed / Strength</h4>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-          </p>
-          </div>
-          </article>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
 
-  <!-- second trainer bio -->
-<article class="trainer">
-  <div class="trainer-bio text-right">
-    <h3>Joanna Gill</h3>
-    <h4>Endurance</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-  <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-</article>
+    <!-- second trainer bio -->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
 
-<!-- third trainer bio -->
-<article class="trainer">
-  <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio text-left">
-    <h3>Harry "the Headband" Smith</h3>
-    <h4>Strength</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-    </div>
-  </article>
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
   </section>
-  
+
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
-  <h2 class="section-title secondry-border">Reach Out</h2>
-  <div class="conctact-info">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.4245564186303!2d-123.12017178413247!3d49.268351979706594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673dbe80a0fb9%3A0x59e64c226801cebc!2s619%20Moberly%20Rd%2C%20Vancouver%2C%20BC%20V5Z%204B1!5e0!3m2!1sen!2sca!4v1645422225340!5m2!1sen!2sca"
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy">
-    </iframe>
-    </div>
+    <h2 class="section-title secondry-border">Reach Out</h2>
+    <div class="contact-info">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.4245564186303!2d-123.12017178413247!3d49.268351979706594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673dbe80a0fb9%3A0x59e64c226801cebc!2s619%20Moberly%20Rd%2C%20Vancouver%2C%20BC%20V5Z%204B1!5e0!3m2!1sen!2sca!4v1645422225340!5m2!1sen!2sca"
+        style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
 
-    <div>
-    <h3>Run Buddy</h3>
-    <p>
-      Any questions or concerns before signing up?
-      <br />
-      Let us know and we'll be happy to talk to you!
-    </p>
-    <address>
-      55 Main Street <br/>
-      Some Town, Ca <br/>
-      12345<br />
-      P: 555.RUN.BUDZ (555.786.2839)<br/>
-      E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-    </address>
-  </div>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
   </section>
-  
+
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
@@ -179,4 +187,5 @@
     </div>
   </footer>
 </body>
+
 </html>
